# vlan-camerahik

./: .gitattributes  .gitignore  AGENTS.md  FEATURES_AND_DIAGRAMS.md  INSTALLATION_GUIDE.md  README.md  index.html  package.json  server.js
electron/: main.js  preload.js
electron/services/: hcnetService.js
hcnet-addon/: CMakeLists.txt  addon.cpp  package.json
hcnet-addon/include/: README.txt
hcnet-addon/lib/: README.txt
native-engine/: Cargo.toml
src/: App.jsx  index.css
src/components/: CameraCell.jsx  CreatePanelModal.jsx  PlaybackCalendar.jsx  PlaybackTimeline.jsx  PlaybackView.jsx  Sidebar.jsx
src/i18n/: en.js  useLanguage.js  vi.js
src/lib/: electron.js  playback-manager.js
src/media/: grid-stream-scheduler.js
src/pages/: LiveView.jsx  Settings.jsx
src/store/: useStore.js
ver2/: .gitignore  FEATURES_AND_DIAGRAMS.md  INSTALLATION_GUIDE.md  LICENSE  README.md  package-lock.json  package.json  vite.config.mjs
ver2/electron/: main.js  preload.js
ver2/electron/services/: hcnetService.js  hikService.js
ver2/hcnet-addon/: addon.cpp
ver2/native-engine/src/: main.rs
ver2/popout-patch/: CMakeLists.txt  dllmain.cpp  launcher.cpp  manifest.xml  test_runner.ps1
ver2/public/: player.html
ver2/src/: App.jsx  index.css
ver2/src/components/: AddDeviceModal.jsx  CameraCell.jsx  PlaybackToolbar.jsx  PlaybackView.jsx  Sidebar.jsx
ver2/src/i18n/: en.js  vi.js
ver2/src/lib/: electron.js
ver2/src/media/: grid-stream-scheduler.js
ver2/src/pages/: LiveView.jsx  Playback.jsx  PopoutPanel.jsx  Settings.jsx
ver2/src/store/: useStore.js
