[package]
name = "native-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
futures-util = { version = "0.3.30", default-features = false, features = ["sink", "std"] }
md-5 = "0.10.6"
base64 = "0.21.7"
bytes = "1.5.0"
url = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
percent-encoding = "2.3.1"
